--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: auto;
+    margin-top: 200px;
     text-align: center;
 }
 
