--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ input {
     appearance: none;
     position: relative;
     background: var(--main-color);
+    color: var(--dark-color);
     box-shadow: inset -6px -6px 9px 0px white, inset 6px 6px 9px 0px rgba(0, 0, 0, 0.4);
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-radius: 16px;
